examples/invalid/typechecking/mismatchedParamCounts.ordinis
foo x y = x
foo x = x
